# itagger

./: KOMGA_KAVITA_GUIDE.md  README.md  example.py  main.py  mypy.ini  pyproject.toml
.github/workflows/: lint.yml
manga_tagger/: cli.py
