[project]
name = "manga-tagger"
version = "0.1.0"
description = "CLI tool to create and embed ComicInfo.xml metadata for manga using AniList API"
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Manga Tagger Contributors" }]
keywords = [
    "manga",
    "metadata",
    "comicinfo",
    "cbz",
    "anilist",
    "komga",
    "kavita",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics",
    "Topic :: System :: Archiving",
]
dependencies = [
    "requests>=2.31.0",
    "lxml>=4.9.0",
    "click>=8.1.0",
    "python-dateutil>=2.8.0",
]

[project.scripts]
manga-tagger = "manga_tagger.cli:main"

[project.urls]
Homepage = "https://github.com/manga-tagger/manga-tagger"
Issues = "https://github.com/manga-tagger/manga-tagger/issues"
Repository = "https://github.com/manga-tagger/manga-tagger"

[build-system]
requires = ["hatchling >= 1.27"]
build-backend = "hatchling.build"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
